v3.0.0.2
--------
* Attempt to reduce the long delay issue when selecting a source for the first time.
* Added indexing commands to try and improved database access speed.

v3.0.0.1
--------
* Fix bug that overflowed the int limits when checking ther version number for TDH3

v3.0.0.0
--------
* Updated TDH to use "pip" commands to install and upgrade tradedangerous.
* Used the official AppConfig.xml locations to try and locate the file automatically using the manual method as a fallback.
* Examined the PATH environment variable to locate the python pathg using the manual method as a fallback.

v2.1.0.5
--------
* Removed the "progbar" option on the TD comand line as this no longer does anything and the progress bar is the default.
* Fixed issue with availableShips being null.
* Fixed issue with old data command. the command "trade.py olddata" is valid.
* Removed old data route limit and added warning to tooltip instead.

v2.1.0.4
--------
* Added support for "--ls-max" and "--planetary" to the OldData command.
* Changed the caption and tool tip for the route option on the old data panel.
* Reduced default limit from 42 to 10 when route is checked since sorting for best distance overall is not an O(n) solution.
* Added missing --pad option to old data panel.

v2.1.0.3
--------
* Fixed bug in commander profile. Issue #48.
* Added clear separator method in ship drop down list.

v2.1.0.2
--------
* Removed any empty options in the update DB command. Fixes issue #47.

v2.1.0.1
--------
* Changed to use the EDAPI plugin supplied with tradedangerous. Thanks to gazelle and eyeonus for updating this.
* Added cAPI timeout to prevent hammering of the API.

v2.1.0.0
--------
* NetLogs disabled if the user presses cancel when asked to locate the AppConfig.xml file.
* EDCE removed.
* Commander Profile requires access token from Frontier.
* Added Krait Phantom and Mamba ship data.

v2.0.8.5
--------
* Only update the commodity lists if they have not been previously set.