@@ -49,7 +49,7 @@
   </ships>
 
   <appSettings>
-    <add key="remoteManifestPath" value="http://markausten.info/files/tdhelper2/test/TDHelper.manifest" />
+    <add key="remoteManifestPath" value="http://markausten.info/files/tdhelper3/TDHelper.manifest" />
     <add key="minimumPythonVersion" value="34"/>
     <add key="pipUrl" value="https://pypi.python.org/pypi/tradedangerous/json"/>
   </appSettings>
